[gd_scene load_steps=5 format=3 uid="uid://dcq4awtwaie88"]

[ext_resource type="Script" path="res://scenes/subscenes/player/palyer.gd" id="1_efwda"]
[ext_resource type="PackedScene" uid="uid://doyqycukrkcq7" path="res://GameAssets/Models/roverplacehold.dae" id="2_wmgnu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ipxsc"]
size = Vector3(1.21172, 1, 1)

[sub_resource type="Environment" id="Environment_dcep5"]
ambient_light_color = Color(1, 0.905882, 0.937255, 1)

[node name="CharacterBody3D" type="CharacterBody3D"]
floor_stop_on_slope = false
floor_max_angle = 0.349066
script = ExtResource("1_efwda")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.106596, 0, 0)
shape = SubResource("BoxShape3D_ipxsc")

[node name="Cam Base" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Cam Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.80445)
environment = SubResource("Environment_dcep5")
current = true

[node name="graphics" parent="." instance=ExtResource("2_wmgnu")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, -0.542495, 0)

[node name="menuButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -70.0
offset_right = 110.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0

[node name="leftButton" type="Button" parent="."]
modulate = Color(0, 0, 0, 0)
offset_right = 704.0
offset_bottom = 896.0
mouse_filter = 1

[node name="rightButton" type="Button" parent="."]
modulate = Color(0, 0, 0, 0)
offset_left = 896.0
offset_right = 1600.0
offset_bottom = 896.0
mouse_filter = 1

[connection signal="pressed" from="menuButton" to="." method="_on_button_pressed"]
[connection signal="button_down" from="leftButton" to="." method="_on_left_button_button_down"]
[connection signal="button_up" from="leftButton" to="." method="_on_left_button_button_up"]
[connection signal="button_down" from="rightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_up" from="rightButton" to="." method="_on_right_button_button_up"]

[editable path="graphics"]
